force-app/main/default/objects/FinancialAccount__c/fields/CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentBalance__c</fullName>
    <formula>IF(
  HasNormalDebitBalance__c,
  StartingBalance__c + AmountAllFinancialEntries__c,
  StartingBalance__c - AmountAllFinancialEntries__c
)</formula>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>