force-app/main/default/objects/FinancialAccount__c/fields/HasNormalDebitBalance__c.field-meta.xml
<CustomField>
    <fullName>HasNormalDebitBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a positive balance in the financial account represents a debit to the owner of the financial account</description>
    <inlineHelpText>Whether a positive balance in the financial account represents a debit to the owner of the financial account</inlineHelpText>
    <label>Normal Debit Balance</label>
    <type>Checkbox</type>
</CustomField>