force-app/main/default/objects/FinancialAccount__c/fields/StartingBalance__c.field-meta.xml
<CustomField>
    <fullName>StartingBalance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>